# keysight-dsox1200-control

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: COMMAND_COVERAGE.md  GUI_ROADMAP.md  MANUAL_COMMAND_AUDIT.md
docs/vendor_manuals/: .gitignore  README.md
examples/: basic_connection.py  capture_waveform.py  launch_gui.py
src/keysight_dsox1200/: __init__.py  discovery.py  errors.py  gui_app.py  instrument.py  models.py
tests/: test_api_surface.py  test_command_formatting.py
