[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keysight-dsox1200-control"
version = "0.1.0"
description = "Python driver and GUI for Keysight InfiniiVision 1200 X-Series oscilloscopes"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
keywords = ["oscilloscope", "keysight", "SCPI", "VISA", "DSOX1204", "InfiniiVision", "instrument"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "pyvisa>=1.12",
    "pyvisa-py>=0.5",
    "numpy>=1.20",
]

[project.optional-dependencies]
gui = ["matplotlib>=3.4"]
dev = ["pytest>=7.0", "matplotlib>=3.4"]

[project.scripts]
dsox1200-gui = "keysight_dsox1200.gui_app:main"

[project.urls]
Homepage = "https://github.com/your-org/keysight-dsox1200-control"
"Bug Tracker" = "https://github.com/your-org/keysight-dsox1200-control/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]
